# texprs

./: CHANGELOG.md  LICENSE  README.md  README2.md  TODO.md  texprs.cabal
app/: Main.hs
docs/: autotab.tbnf  autotab.tbnf-old  delme.tbnf  tbnf.tbnf
examples/: example.fn  example.ld  listdown.tbnf-ill  numbers.in  numbers.tbnf  production-lambda.tbnf-ill  starting_number.tbnf
src/Data/: CharSet.hs  Texpr.hs
src/Data/Tree/: Match.hs  Template.hs
src/Text/: Location.hs  Tbnf.hs
src/Text/Location/: String.hs  Text.hs
src/Text/Tbnf/: Bootstrap.hs  Compile.hs  Define.hs  IO.hs  Tree.hs
src/Text/Tbnf/Bootstrap/: Grammar.hs
src/Text/Tbnf/Read/: Generic.hs  Monad.hs  String.hs  Texpr.hs  Texpr.hs-boot  Text.hs  Text.hs-boot
src/Text/Texpr/: Bootstrap.hs  Compile.hs  Define.hs  Monad.hs  Tree.hs
src/Text/Texpr/Monad/: Generic.hs  String.hs  Texpr.hs
src/Text/Texpr/PEG/: Generic.hs  Monad.hs  String.hs  Texpr.hs
test/: Main.hs
