cabal-version: 3.0
name: texprs
version: 0.0.1.0
-- synopsis: 
-- description:
category: Text
homepage: https://github.com/edemko/texprs
bug-reports: https://github.com/edemko/texprs/issues
author: Marseille Bouchard
maintainer: zankoku.okuno@gmail.com
copyright: 2023 Marseille Bouchard
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md, CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/edemko/texprs

library
  hs-source-dirs: src
  exposed-modules:
    Data.CharSet
    Text.Location
    Data.Texpr
    Text.Texpr.Bootstrap
    Text.Texpr.Compile
    Text.Texpr.Define
    Text.Texpr.Monad.Generic
    Text.Texpr.Monad.String
    Text.Texpr.Monad.Texpr
    Text.Texpr.Tree
  other-modules:
    Text.Texpr.Monad
  build-depends:
    , base >=4.11.1
    , containers >=0.6
    , reverse-list >=0.3
    , these >=1.0
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Wunticked-promoted-constructors

executable texprs
  hs-source-dirs: app
  main-is: Main.hs
  -- other-modules:
  build-depends:
    , base
    , containers
    , pretty-simple
    , texprs
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -Wunticked-promoted-constructors

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , texprs
    , base
    -- , quickcheck-classes
    -- , tasty
    -- , tasty-hunit
    -- , tasty-quickcheck
  default-language: Haskell2010
  ghc-options: -Wall -O2 -Wunticked-promoted-constructors

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , texprs
    , base
    , gauge
  default-language: Haskell2010
  ghc-options: -Wall -O2 -Wunticked-promoted-constructors
