cabal-version: 3.0
name: texprs
version: 0.0.1.0
-- synopsis: 
-- description:
category: Text
homepage: https://github.com/edemko/texprs
bug-reports: https://github.com/edemko/texprs/issues
author: Marseille Bouchard
maintainer: zankoku.okuno@gmail.com
copyright: 2023 Marseille Bouchard
license: BSD-3-Clause
license-file: LICENSE
extra-source-files: README.md, CHANGELOG.md, docs/tbnf.tbnf

source-repository head
  type: git
  location: https://github.com/edemko/texprs

library
  hs-source-dirs: src
  exposed-modules:
    Data.CharSet
    Text.Location
    Text.Location.String
    Data.Texpr
    Text.Tbnf
    Text.Tbnf.Bootstrap
    Text.Tbnf.IO
    Text.Tbnf.Read.Generic
    Text.Tbnf.Read.String
    Text.Tbnf.Read.Texpr
  other-modules:
    Text.Tbnf.Compile
    Text.Tbnf.Define
    Text.Tbnf.Read.Monad
    Text.Tbnf.Tree
  build-depends:
    , base >=4.11.1
    , containers >=0.6
    , reverse-list >=0.3
    , text >=1.2
    , these >=1.0
  default-language: Haskell2010
  ghc-options: -Wall -Wunticked-promoted-constructors

executable tbnf
  hs-source-dirs: app
  main-is: Main.hs
  -- other-modules:
  build-depends:
    , base
    , containers
    , optparse-applicative >=0.17
    , texprs
  default-language: Haskell2010
  ghc-options: -Wall -O2 -threaded -Wunticked-promoted-constructors

test-suite test
  hs-source-dirs: test
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , base
    , pretty-simple >=4.1
    , texprs
    -- , quickcheck-classes
    -- , tasty
    -- , tasty-hunit
    -- , tasty-quickcheck
  default-language: Haskell2010
  ghc-options: -Wall -Wunticked-promoted-constructors

benchmark bench
  hs-source-dirs: bench
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , texprs
    , base
    , gauge
  default-language: Haskell2010
  ghc-options: -Wall -O2 -Wunticked-promoted-constructors
